# movie-matcher

./: README.md
movie-matcher/: .env.example  .gitignore  BUG_FIXES.md  CHANGES.md  DEPLOYMENT.md  DOCKER_SETUP.md  Makefile  NEW_FEATURES.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  docker-build.sh  docker-compose.yml  docker-run.sh  setup.sh  start-backend-java.sh  start-backend.sh  start-docker.sh  start-frontend.sh  test-local.sh
movie-matcher/backend/: .env.example  Cargo.toml  Dockerfile
movie-matcher/backend-java/: .dockerignore  .gitignore  API_INTEGRATION.md  ARCHITECTURE.md  DATABASE_SETUP.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  REFACTORING_SUMMARY.md  USAGE_EXAMPLES.md  pom.xml
movie-matcher/backend/src/: handlers.rs  main.rs  models.rs  omdb.rs  room.rs
movie-matcher/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
movie-matcher/frontend-smartphone/: pubspec.yaml
movie-matcher/frontend-smartphone/lib/: app.dart  main.dart
movie-matcher/frontend-smartphone/lib/models/: client_message.dart  movie_data.dart  participant_likes.dart  room_info.dart  server_message.dart
movie-matcher/frontend-smartphone/lib/providers/: connection_provider.dart  room_provider.dart  voting_provider.dart
movie-matcher/frontend-smartphone/lib/screens/: create_room_screen.dart  home_screen.dart  (+4 more)
movie-matcher/frontend-smartphone/test/: widget_test.dart
movie-matcher/frontend/src/: App.vue
movie-matcher/k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml
(+95 files in other folders)
